<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sokoban</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_exit">Exit</string>
    <string name="action_restart">Restart</string>
    <string name="action_back">Undo</string>
    <string name="action_redo">Redo</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="but_new_game">Start new game</string>
    <string name="but_help">Help</string>
    <string name="but_about">About</string>
    <string name="but_import">Import levels pack</string>
    <string name="but_close_dialog">Close</string>
    <string name="but_delete_pack">Delete levels pack</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="icon_checked">Solved</string>
    <string name="icon_unsolved">Not solved/tried</string>
    <string name="str_moves">Moves:</string>
    <string name="str_pack">Levels pack:</string>
    <string name="str_level">Level:</string>
    <string name="str_time">Time elapsed:</string>

</resources>
