<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.pagepo.sokoban.StartActivity$PlaceholderFragment" >

    <Button
        android:id="@+id/butNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_new_game" />

    <Button
        android:id="@+id/butSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_settings" />

    <Button
        android:id="@+id/butImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_import" />    

    <Button
        android:id="@+id/butHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/but_help" />

</LinearLayout>
